# portfolio

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  .npmrc  AGENTS.md  AI_SDK_UPGRADE_FIXES.md  CLAUDE.md  Dockerfile  Makefile  PORTFOLIO_CHATBOT_SUMMARY.md  PYDANTIC_AI_CHATBOT.md  README.md  alembic.ini  conftest.py  db_create_migration.sh  db_run_migration.sh  docker-compose.yml  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  portfolio.code-workspace  portfolio.session.sql  pyproject.toml  pytest.ini  railway_backend.json  railway_fastapi.json  railway_nextjs.json  requirements.txt  roadmap.md  run_db_migration.sh  vercel.json
.claude/: .gitignore  conditionally_send_slack.sh  prep_claude_remote_env_var.py  prep_env_var_claude.py  settings.json  setup_remote.sh
.claude/hooks/: README.md  approval_server.py  neon-guard.sh  railway-link-guard.sh  railway.json  slack_approve.py
.codex/: setup.sh
.cursor/: Dockerfile  README.md  environment.json  install.sh  setup.sh
.cursor/rules/: fastapi.mdc  general.mdc  nextjs.mdc  react.mdc
.github/: PR_ENVIRONMENTS.md
.github/logfire-investigate/: README.md  ignore_signatures.txt  investigate.py
.github/queries/: README.md  railway_upsert_database_vars.graphql  update_railway_variables.graphql
.github/scripts/: .gitignore  local_test.sh  railway_upsert_database_vars.sh
.github/workflows/: logfire_investigate.yml  neon_workflow.yml  require-pr-checklist.yml  sync-dev.yml  tests.yml
.logfire/: ignore_signatures.txt
adhoc/: test_push.py
api/: Dockerfile  README.md  __init__.py  conftest.py  cron.py  db_create_migration.sh  db_run_migration.sh  hypercorn_config.py  index.py  logger.py  open_phone.py  password.py  railway_fastapi.json  requirements.txt  seed_db.py  start.sh
api/google/: README.md  __init__.py  auth.py  gmail.py  sheets.py
api/src/: cron.py  unreplied_emails.sql
api/tests/: conftest.py  test_open_phone.py  test_thing.py
api_src/: cron.py  open_phone.py  unreplied_emails.sql
api_src/adhoc/: openphone_delete_contacts.py
api_src/chat/: README.md  routes.py
api_src/database/: __init__.py  alembic.ini  database.py
api_src/examples/: __init__.py  models.py  routes.py  schema.py
api_src/google/: auth.py  (+8 more)
app/: layout.tsx  page.tsx
apps/: README.md
apps/api/: Dockerfile  conftest.py  db_create_migration.sh  db_run_migration.sh  index.py  pyproject.toml  railway_fastapi.json  seed_db.py  start.sh
apps/api/src/: cron.py
apps/api/src/ai/: README.md
apps/api/src/ai/chat_emilio/: agent.py  routes.py
apps/api/src/ai/chat_weather/: agent.py  routes.py
apps/api/src/ai/multi_agent_chat/: graph.py  routes.py
apps/api/src/clickup/: service.py
apps/api/src/contact/: models.py  routes.py  service.py
apps/api/src/database/: __init__.py  database.py  reset_alembic.sql
apps/api/src/database/migrations/: env.py
apps/api/src/database/migrations/versions/: 0003_create_email_messages_.py  0004_oath_table_.py  0006_oauth_credentials_.py  0008_email_cols_.py  0014_user_.py  0017_first_last_name_.py  0018_contactcols_.py  0019_nullable_slug_.py
apps/api/src/examples/: models.py  routes.py  schema.py
apps/api/src/google/: README.md  __init__.py
apps/api/src/google/calendar/: service.py
apps/api/src/google/common/: routes.py  service_account_auth.py
apps/api/src/google/gmail/: __init__.py  db_ops.py  models.py  routes.py  service.py  tests.py
apps/api/src/google/gmail/adhoc/: update_send_as.py
apps/api/src/google/pubsub/: routes.py
apps/api/src/google/sheets/: __init__.py  service.py
apps/api/src/oauth/: __init__.py  models.py  service.py
apps/api/src/open_phone/: __init__.py  escalate.py  models.py  routes.py  schema.py  service.py
apps/api/src/open_phone/adhoc/: get_contact.py  openphone_delete_contacts.py
apps/api/src/push/: models.py  routes.py  service.py
apps/api/src/scheduler/: README.md  routes.py  service.py
apps/api/src/tests/: conftest.py  test_ai_chat_vercel.py  test_multi_agent_chat_vercel.py  test_open_phone.py
apps/api/src/user/: models.py  routes.py  service.py
apps/api/src/utils/: clerk.py  dependencies.py
apps/api/src/zillow_email/: service.py  test.sql
apps/sernia_mcp/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODOS.md  fastmcp.json  pyproject.toml  railway_sernia_mcp.json
apps/sernia_mcp/src/sernia_mcp/: __init__.py  app.py  auth.py  bearer.py  config.py  dev_server.py  identity.py  server.py
apps/sernia_mcp/src/sernia_mcp/clients/: __init__.py  _fuzzy.py  git_sync.py  gmail.py  google_auth.py  quo.py  rate_limit.py
apps/sernia_mcp/src/sernia_mcp/core/: __init__.py  errors.py  skills.py  types.py
apps/sernia_mcp/src/sernia_mcp/core/clickup/: _client.py  reads.py  tasks.py  writes.py
apps/sernia_mcp/src/sernia_mcp/core/google/: _email_cleanup.py  calendar.py  drive.py  gmail.py
apps/sernia_mcp/src/sernia_mcp/core/quo/: contact_writes.py  contacts.py  send_sms.py
apps/sernia_mcp/src/sernia_mcp/core/workspace/: files.py
apps/sernia_mcp/src/sernia_mcp/tools/: __init__.py  approvals.py  clickup.py  context.py  google.py  quo.py  workspace.py
apps/sernia_mcp/tests/: conftest.py  test_approvals.py  test_auth.py  test_bearer.py  test_clickup_writes.py  test_context.py  test_disable_auth.py  test_easy_lifts.py  test_email_cleanup.py  test_email_thread_live.py  test_git_sync_flow.py  test_git_sync_wiring.py  test_google_drive.py  test_http_app.py  test_quo_active_threads.py  test_quo_create_contact.py  test_quo_rate_limit.py  test_smoke.py  test_workspace.py
components/: app-sidebar.tsx  data-table.tsx  main-nav.tsx  multi-select.tsx  navbar.tsx  theme-toggle.tsx  typography.tsx
docs/: WORKTREES.md
prompts/: ai_email_responder.md
scripts/: create-worktree.sh  ensure-postgres.sh  export_seed_fixture.py  logfire_investigate.py  remove-worktree.sh  worktree-create.sh  worktree-remove.sh
tests/: example_neon_fast_api.spec.ts  example_neon_nextjs.spec.ts  examples.spec.ts  google_oauth.spec.ts  test_multiselect_click.spec.ts
(+516 files in other folders)
