[project]
name = "portfolio"
version = "0.1.0"
description = "Sernia Capital Portfolio Monorepo - Python workspace root"
readme = "README.md"
requires-python = ">=3.11"
# Root package has minimal dependencies - apps have their own
dependencies = [
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "ipykernel",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.2",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/prefect",
]
