[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "annotated-types==0.7.0",
    "anyio>=4.8.0",
    "apscheduler>=3.11.0",
    "asyncpg==0.29.0",
    "beautifulsoup4>=4.13.4",
    "certifi==2024.7.4",
    "charset-normalizer==3.4.0",
    "clerk-backend-api==1.7.2",
    "click==8.1.7",
    "distro==1.9.0",
    "dnspython==2.6.1",
    "email-validator==2.2.0",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.4",
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "h11>=0.16.0",
    "httpcore>=1.0.5",
    "httptools==0.6.1",
    "httpx==0.28.1",
    "hypercorn==0.17.3",
    "idna==3.7",
    "itsdangerous==2.2.0",
    "jinja2>=3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "openai>=1.77.0",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11.2",
    "pydantic-ai[dbos]>=1.62.0",
    "dbos>=1.3.0",
    "prefect>=3.4.24",
    "logfire[asyncpg,httpx,fastapi,sqlalchemy,requests]>=0.11.0",
    "pygments==2.18.0",
    "pytest==8.3.4",
    "pytest-asyncio>=0.25.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.18",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.41",
    "starlette>=0.40.0",
    "twilio>=9.5.2",
    "typer==0.12.3",
    "strawberry-graphql[fastapi]>=0.219.2",
    "pytz>=2025.2",
    "svix>=1.81.0",
    "croniter>=6.0.0",
    "uvicorn>=0.32.0",
    "pydantic-ai-filesystem-sandbox>=0.9.0",
    "pydantic-monty>=0.0.7",
    "pypdf>=6.7.2",
    "fastmcp>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "ipykernel",
]
