[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.12",
    "hypercorn>=0.17.3",
    "python-multipart>=0.0.18",
    # Database
    "sqlalchemy[asyncio]>=2.0.41",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.1",
    # AI / LLM
    "openai>=1.77.0",
    "pydantic>=2.11.2",
    "pydantic-ai[dbos]>=1.62.0",
    "pydantic-ai-filesystem-sandbox>=0.9.0",
    "pydantic-monty>=0.0.7",
    "fastmcp>=3.2.0",
    # Observability
    "logfire[asyncpg,httpx,fastapi,sqlalchemy,requests]>=0.11.0",
    # Auth
    "clerk-backend-api>=5.0.0",
    # Scheduling / workflows
    "apscheduler>=3.11.0",
    "croniter>=6.0.0",
    "dbos>=1.3.0",
    "prefect>=3.4.24",
    # Google APIs
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    # External integrations
    "twilio>=9.5.2",
    "svix>=1.81.0",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.219.2",
    # Starlette SessionMiddleware requires this
    "itsdangerous>=2.2.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "rapidfuzz>=3.0.0",
    "pywebpush>=2.3.0",
    "pypdf>=6.7.2",
    "duckdb>=1.2.0",
    "pytz>=2025.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "griffe>=1.0.0,<2.0.0", # pydantic-ai uses old griffe import path; 2.0 split the package
    "markdownify>=1.2.2",
    "pydantic-ai-skills>=0.5.1",
    "genai-prices>=0.0.50",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "ipykernel",
]
