[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sernia_mcp"]

[project]
name = "sernia-mcp"
version = "0.1.0"
description = "MCP server exposing Sernia Capital tools (Quo SMS, Gmail, ClickUp, workspace memory) to remote AI harnesses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp[apps]>=3.2.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.2",
    "python-dotenv>=1.0.1",
    "logfire>=0.11.0",
    "google-api-python-client>=2.108.0",
    "google-auth>=2.30.0",
    "google-auth-httplib2>=0.1.1",
    "rapidfuzz>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "live: tests that hit real third-party APIs (require API keys; opt-in)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
